objects/Purchase_Line__c/Purchase_Line__c.object-meta.xml
<CustomObject>
    <label>Purchase Line</label>
    <nameField>
        <displayFormat>PL-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>