objects/Purchase_Line__c/fields/Calculated_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Unit_Cost__c</fullName>
    <formula>IF(ISNULL(Quantity__c) == false, Line_Cost_Incl_Tax__c / Quantity__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Unit Cost</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>