objects/Purchase_Line__c/fields/Coupa_Allocation_Line__c.field-meta.xml
<CustomField>
    <fullName>Coupa_Allocation_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coupa Allocation Line</label>
    <type>Checkbox</type>
</CustomField>