objects/Purchase_Line__c/fields/Coupa_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Coupa_GL_Account__c</fullName>
    <label>Coupa GL Account</label>
    <length>30</length>
    <type>Text</type>
</CustomField>