objects/Purchase_Line__c/fields/Coupa_Item__c.field-meta.xml
<CustomField>
    <fullName>Coupa_Item__c</fullName>
    <label>Coupa Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>