objects/Purchase_Line__c/fields/Coupa_Supplier_Number__c.field-meta.xml
<CustomField>
    <fullName>Coupa_Supplier_Number__c</fullName>
    <label>Coupa Supplier Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>