objects/Purchase_Line__c/fields/Coupa_UOM__c.field-meta.xml
<CustomField>
    <fullName>Coupa_UOM__c</fullName>
    <label>Coupa UOM</label>
    <length>30</length>
    <type>Text</type>
</CustomField>