objects/Purchase_Line__c/fields/Direct_G_L_Account__c.field-meta.xml
<CustomField>
    <fullName>Direct_G_L_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct G/L Account</label>
    <type>Checkbox</type>
</CustomField>