objects/Purchase_Line__c/fields/Equipment_No__c.field-meta.xml
<CustomField>
    <fullName>Equipment_No__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Equipment No.</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Resource__c.Category__c</field>
            <operation>equals</operation>
            <value>Equipment</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Purchase Lines</relationshipLabel>
    <relationshipName>Purchase_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>