objects/Purchase_Line__c/fields/Expected_Receipt_Date_Coupa__c.field-meta.xml
<CustomField>
    <fullName>Expected_Receipt_Date_Coupa__c</fullName>
    <formula>Purchase_Order__r.CreatedDate +7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Receipt Date_Coupa</label>
    <type>Date</type>
</CustomField>