objects/Purchase_Line__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Purchase_Price__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Vendor_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Purchase_Price__c</referenceTo>
    <relationshipLabel>Purchase Lines</relationshipLabel>
    <relationshipName>Purchase_Lines_del</relationshipName>
    <type>Lookup</type>
</CustomField>