objects/Purchase_Line__c/fields/Item_Blocked__c.field-meta.xml
<CustomField>
    <fullName>Item_Blocked__c</fullName>
    <formula>False</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Blocked</label>
    <type>Checkbox</type>
</CustomField>