objects/Purchase_Line__c/fields/Line_Cost_Incl_Tax__c.field-meta.xml
<CustomField>
    <fullName>Line_Cost_Incl_Tax__c</fullName>
    <formula>Line_Cost__c +  Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Cost Incl. Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>