objects/Purchase_Line__c/fields/Line_Status__c.field-meta.xml
<CustomField>
    <fullName>Line_Status__c</fullName>
    <formula>IF(Quantity__c = Outstanding_Qty__c,'Open', 
IF(Outstanding_Qty__c = 0,'All Received','Back Order'))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Status</label>
    <type>Text</type>
</CustomField>