objects/Purchase_Line__c/fields/Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Type__c</fullName>
    <formula>IF(Service_Center__r.NAV_Service_Center_Code__c == '15', IF(Item__r.NAV_Item_No__c != null, 'Item', 'G_L_Account'), 'G_L_Account')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Type</label>
    <type>Text</type>
</CustomField>