objects/Purchase_Line__c/fields/No__c.field-meta.xml
<CustomField>
    <fullName>No__c</fullName>
    <formula>IF(Line_Type__c == 'G_L_Account', TEXT(G_L_Account__c), Item__r.NAV_Item_No__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No.</label>
    <type>Text</type>
</CustomField>