objects/Purchase_Line__c/fields/Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Amount__c</fullName>
    <formula>(Outstanding_Qty__c * Unit_Cost__c) - ( Discount__c * Outstanding_Qty__c / Quantity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>