objects/Purchase_Line__c/fields/Outstanding_Qty__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Qty__c</fullName>
    <formula>Quantity__c - Received_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Qty.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>