objects/Purchase_Line__c/fields/PO_Status__c.field-meta.xml
<CustomField>
    <fullName>PO_Status__c</fullName>
    <formula>TEXT( Purchase_Order__r.Document_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Status</label>
    <type>Text</type>
</CustomField>