objects/Purchase_Line__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <formula>IF(LEN(Item__r.Name) &gt; 50, LEFT(Item__r.Name, 50), Item__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>