objects/Purchase_Line__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <label>Purchase Order</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Purchase Lines</relationshipLabel>
    <relationshipName>Purchase_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>