objects/Purchase_Line__c/fields/Qty_to_Receive__c.field-meta.xml
<CustomField>
    <fullName>Qty_to_Receive__c</fullName>
    <label>Qty. to Receive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>