objects/Purchase_Line__c/fields/Received_Amount_Total__c.field-meta.xml
<CustomField>
    <fullName>Received_Amount_Total__c</fullName>
    <formula>Received_Qty__c  *  Calculated_Unit_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Received Amount Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>