objects/Purchase_Line__c/fields/Received_Qty__c.field-meta.xml
<CustomField>
    <fullName>Received_Qty__c</fullName>
    <label>Received Qty.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>