objects/Purchase_Line__c/fields/Return_Order__c.field-meta.xml
<CustomField>
    <fullName>Return_Order__c</fullName>
    <formula>Purchase_Order__r.Return_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return Order</label>
    <type>Checkbox</type>
</CustomField>