objects/Purchase_Line__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Sales_Order__c.Service_Center__c</field>
            <operation>equals</operation>
            <valueField>$Source.Service_Center__c</valueField>
        </filterItems>
        <filterItems>
            <field>Sales_Order__c.Document_Type__c</field>
            <operation>equals</operation>
            <value>Sales Order</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Purchase Lines</relationshipLabel>
    <relationshipName>Purchase_Lines_SO</relationshipName>
    <type>Lookup</type>
</CustomField>