objects/Purchase_Line__c/fields/Sales_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_No__c</fullName>
    <formula>Sales_Order__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order No.</label>
    <type>Text</type>
</CustomField>