objects/Purchase_Line__c/fields/Synced__c.field-meta.xml
<CustomField>
    <fullName>Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synced</label>
    <type>Checkbox</type>
</CustomField>