objects/Purchase_Line__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tax</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>