objects/Purchase_Line__c/fields/Vendor_Account__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Lines</relationshipLabel>
    <relationshipName>Purchase_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>