objects/Purchase_Line__c/fields/Vendor_Vehicle_Number__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Vehicle_Number__c</fullName>
    <label>Vendor Vehicle Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>