objects/Purchase_Line__c/validationRules/GL_Account_Restriction_16400.validationRule-meta.xml
<ValidationRule>
    <fullName>GL_Account_Restriction_16400</fullName>
    <active>false</active>
    <description>Matthew Deluca, and Angela_Laterza</description>
    <errorConditionFormula>AND( 
OR (ISNEW(), ISCHANGED (  G_L_Account__c  )), 
OR (ISPICKVAL(PRIORVALUE( G_L_Account__c ),  '16400'),
 ISPICKVAL( G_L_Account__c, '16400')), 
 OR(  $User.Id  &lt;&gt; "005f4000000olNn"),
 OR(  $User.Id  &lt;&gt; "005f4000000olOF"))</errorConditionFormula>
    <errorDisplayField>G_L_Account__c</errorDisplayField>
    <errorMessage>Restricted GL Account</errorMessage>
</ValidationRule>