objects/Purchase_Line__c/validationRules/GL_Account_Restriction_DC.validationRule-meta.xml
<ValidationRule>
    <fullName>GL_Account_Restriction_DC</fullName>
    <active>true</active>
    <description>Diane Ciszak</description>
    <errorConditionFormula>AND( 
OR (ISNEW(), ISCHANGED (  G_L_Account__c  )), 
OR (ISPICKVAL(PRIORVALUE( G_L_Account__c ),  '15400'),
 ISPICKVAL( G_L_Account__c, '15400')), 
 OR(  $User.Id  &lt;&gt; "005f4000000olNi"))</errorConditionFormula>
    <errorDisplayField>G_L_Account__c</errorDisplayField>
    <errorMessage>Restricted GL Account</errorMessage>
</ValidationRule>