objects/Purchase_Line__c/validationRules/Service_Center_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Center_Restriction</fullName>
    <active>false</active>
    <errorConditionFormula>Purchase_Order__r.Service_Center__c != Service_Center__c &amp;&amp; $User.Allow_Creating_POs_with_Multiple_SCs__c != true</errorConditionFormula>
    <errorDisplayField>Service_Center__c</errorDisplayField>
    <errorMessage>Header Service Center needs to match the line item Service Center</errorMessage>
</ValidationRule>